# pece-monografia

./: LICENSE  README.md
src/api/: main.py  pyproject.toml
src/api/smell_detector_api/enums/: codesmell.py
src/api/smell_detector_api/helpers/: tokenizer.py
src/api/smell_detector_api/models/: scaler.pkl
src/frontend/: package-lock.json  package.json
src/frontend/public/: index.html
src/frontend/src/: App.css  App.tsx
src/models/: model_with_code_bert.ipynb  model_with_word2Vec.ipynb
src/models/code_snippets/: GeneratedClass_10.cs  GeneratedClass_100.cs  GeneratedClass_101.cs  GeneratedClass_102.cs  GeneratedClass_103.cs  GeneratedClass_104.cs  GeneratedClass_105.cs  GeneratedClass_106.cs  GeneratedClass_107.cs  GeneratedClass_108.cs  GeneratedClass_109.cs  GeneratedClass_11.cs  GeneratedClass_110.cs  GeneratedClass_111.cs  GeneratedClass_112.cs  GeneratedClass_113.cs  GeneratedClass_114.cs  GeneratedClass_115.cs  GeneratedClass_12.cs  GeneratedClass_13.cs  GeneratedClass_14.cs  GeneratedClass_15.cs  GeneratedClass_16.cs  GeneratedClass_17.cs  GeneratedClass_18.cs  GeneratedClass_19.cs  GeneratedClass_2.cs  GeneratedClass_20.cs  GeneratedClass_21.cs  GeneratedClass_22.cs  GeneratedClass_23.cs  GeneratedClass_24.cs  GeneratedClass_25.cs  GeneratedClass_26.cs  GeneratedClass_27.cs  GeneratedClass_28.cs  GeneratedClass_29.cs  GeneratedClass_30.cs  GeneratedClass_31.cs  GeneratedClass_32.cs  (+63 more)
src/models/inputs/: commits.jsonl  labels.csv
src/models/outputs/: data_preprocessed.csv  svm_cbb.pkl  word2vec_model.model
src/models/raw_codes/: GeneratedClass_1.cs  (+92 more)
(+5 files in other folders)
